--- a/ppmtool-backend/pom.xml
+++ b/ppmtool-backend/pom.xml
@@ -8,11 +8,11 @@
         <version>2.3.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.vasildedejski</groupId>
-    <artifactId>fullstack-tool-back</artifactId>
+    <groupId>com.vdedejski</groupId>
+    <artifactId>ppmtool</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>fullstack-tool-back</name>
-    <description>Personal Project Managment Tool</description>
+    <name>ppmtool</name>
+    <description>A personal project managment tool.</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -40,9 +40,14 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
