--- a/ppmtool-backend/pom.xml
+++ b/ppmtool-backend/pom.xml
@@ -71,9 +71,13 @@
             <artifactId>javax.el</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
