--- a/ppmtool-backend/src/main/resources/application.properties
+++ b/ppmtool-backend/src/main/resources/application.properties
@@ -1,5 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.show-sql=true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/springbootdb?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+
+#Using the right database platform is extremly important on Spring Boot 2.0
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+#CONFLICTS WITH HEROKU from local host
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
